changed latest tag samples

--- a/samples/psp-deny-latest-tag/deployment-violation.yaml
+++ b/samples/psp-deny-latest-tag/deployment-violation.yaml
@@ -5,6 +5,6 @@ metadata:
 spec:
   containers:
     - name: uses-private-image
-      image: 071460744267.dkr.ecr.us-east-1.amazonaws.com/test/snyk:latest
+      image: alpine:latest
       imagePullPolicy: IfNotPresent
       command: [ "echo", "SUCCESS" ]
