multiple users support

--- a/multi-rbac-cluster/templates/clusterroletemplatebinding.yaml
+++ b/multi-rbac-cluster/templates/clusterroletemplatebinding.yaml
@@ -1,9 +1,9 @@
 {{ $root := . }}
-{{- range $indexu, $user := .Values }}
+{{- range $indexu, $user := .Values.users }}
 ---
 {{- range $cluster, $role := $user.clusters }}
 apiVersion: management.cattle.io/v3
-Name: ctrb-{{ trunc 8 (sha256sum (printf "%s/%s" $root.Release.Namespace $user.principalName )) }}
+Name: ctrb-{{ trunc 8 (sha256sum (printf "%s/%s" $cluster $user.name )) }}
 {{ if eq $cluster "local" }}
 Namespace: {{$cluster}}
 {{ else  }}
@@ -12,7 +12,7 @@ Namespace: {{$cluster}}
 {{ end }}
 {{/* clusterName: c-m-{{ trunc 8 (sha256sum (printf "%s/%s" $root.Release.Namespace $root.Values.cluster.name)) }} */}}
 metadata:
-  name: ctrb-{{ trunc 8 (sha256sum (printf "%s/%s" $root.Release.Namespace $user.principalName )) }}
+  name: ctrb-{{ trunc 8 (sha256sum (printf "%s/%s" $cluster $user.name )) }}
   namespace: {{$cluster}}
 clusterName: {{$cluster}}
 kind: ClusterRoleTemplateBinding
