--- a/multi-rbac-cluster/values.yaml
+++ b/multi-rbac-cluster/values.yaml
@@ -1,8 +1,13 @@
-user:
-  name: test
-  id: u-lhjsb
-  principal: local://u-lhjsb
-  clusters: {
-    local: cluster-member,
-    c-m-xft945rl: cluster-member
-  }
+users:
+  - name: test
+    id: u-lhjsb
+    principal: local://u-lhjsb
+    clusters:
+      local: cluster-member
+      c-m-xft945rl: cluster-member
+  - name: test2
+    id: u-lrzdh
+    principal: local://u-lrzdh
+    clusters:
+      local: cluster-member
+      c-m-xft945rl: cluster-member
